[project]
name = "byteforge-converse-models"
version = "0.1.0"
authors = [
  { name="Jason Byteforge", email="jason@reallybadapps.com" },
]
description = "Shared data models for ByteforgeConverse — conversations, messages, turns, and sessions"
keywords = ["byteforge", "converse", "llm", "conversation", "models"]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "O'Saasy License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/byteforge_converse_models"]

[project.urls]
Homepage = "https://github.com/jmazzahacks/byteforge-converse-models"
Issues = "https://github.com/jmazzahacks/byteforge-converse-models/issues"
